--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/DamsCode/react-pomodoro#readme",
   "dependencies": {
+    "compass": "^0.1.1",
     "easytimer.js": "^4.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
@@ -27,6 +28,10 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "parcel-bundler": "^1.12.4",
-    "sass": "^1.23.7"
+    "sass": "^1.23.7",
+    "eslint": "^6.7.1",
+    "prettier": "^1.19.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1"
   }
 }
