--- a/package.json
+++ b/package.json
@@ -27,11 +27,28 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.23.7",
+    "@becode/eslint-config": "^0.8.2",
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.7.1",
-    "prettier": "^1.19.1",
     "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1"
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-unicorn": "^14.0.0",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^1.19.1",
+    "sass": "^1.23.7"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npx eslint --fix --cache",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged"
+    }
   }
 }
