--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "compass": "^0.1.1",
     "easytimer.js": "^4.0.2",
+    "hover.css": "^2.3.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "susy": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
