--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "lint-staged": "^9.5.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
-    "sass": "^1.23.7"
+    "sass": "^1.23.7",
+    "scut": "^1.4.0"
   },
   "lint-staged": {
     "*.js": [
