--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
-    "build-prod": "parcel build index.html "
+    "build-prod": "parcel build dist/index.html "
   },
   "repository": {
     "type": "git",
